2011-04-05  Xavier Queralt  <xqueralt@flumotion.com>

	* flumotion/component/producers/fms/fms.py:
	Lower log level of some messages

2011-04-05  Xavier Queralt  <xqueralt@flumotion.com>

	* README:
	* flumotion/component/producers/fms/Makefile.am:
	* flumotion/component/producers/fms/admin_gtk.py:
	* flumotion/component/producers/fms/fms.glade:
	* flumotion/component/producers/fms/fms.py:
	* flumotion/component/producers/fms/fms.xml:
	Added two tabs to better debug the input connections to fms producer.

2011-03-24  Josep Joan Ribas  <jribas@flumotion.com>

	reviewed by: Xavier Queralt

	* flumotion/component/producers/fms/fms.py:
	Discard requests to clear metadata.
	We take care of clearing metadata when we receive changes in the
	metadata. There is no need for us to it to clear it in the
	@clearDataFrame handler.

2011-03-24  Josep Joan Ribas  <jribas@flumotion.com>

	reviewed by: Xavier Queralt

	* flumotion/component/producers/fms/fms.py:
	Allow receiving audio stream headers before metadata.
	When the audio tag containing the sequence header comes before
	the new metadata and the codec didn't change we have to keep the
	header and send it later.

2011-03-09  Xavier Queralt  <xqueralt@flumotion.com>

	* flumotion/component/producers/fms/fms.py:
	With the new GStreamer we don't need to set the caps of the appsrc.
	Actually, if we do, the next component receives the streamheader twice
	and can commit suicide if he doesn't like receiving two headers
	(e.g. decoder). See #15261

2011-03-09  Xavier Queralt  <xqueralt@flumotion.com>

	* flumotion/component/producers/fms/fms.py:
	Remove startcodes from the incoming H.264 packets.
	When pushing from a Digital Rapids encoder we get:
	  - access unit delimiter in each packet
	  - SPS and PPS embeded each 2 seconds
	This breaks the decoder so we don't want it!
	See https://code.area51.fluendo.com/private/trac/ticket/14915#comment:7

2010-12-02  Xavier Queralt  <xqueralt@flumotion.com>

	reviewed by: jribas
